--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "file-saver": "^2.0.5",
     "sweetalert2": "^11.7.11",
     "vue": "^3.2.13",
+    "vue-awesome-paginate": "^1.1.46",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.0.3",
     "vuejs-paginate-next": "^1.0.2"
   },
