--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
     "sweetalert2": "^11.7.11",
     "vue": "^3.2.13",
     "vue-awesome-paginate": "^1.1.46",
